세부 변경사항 및 일부 로직 구현

--- a/refacbus_admin/src/App.css
+++ b/refacbus_admin/src/App.css
@@ -17,6 +17,11 @@
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
+.custom-calendar {
+  width: 100% !important;
+  height: 100% !important;
+  font-size: 1.3rem;
+}
 
 @keyframes logo-spin {
   from {
